<resources>
    <string name="app_name">BaiBOSS</string>
    <string name="login_input_username">(User)IMSI</string>
    <string name="login_input_error_pwd">Password is failure</string>
    <string name="login_input_error_code">Verification Code error</string>
    <string name="login_input_error_user">User is not exist</string>
    <string name="login_input_password">Password</string>
    <string name="login_input_code">Verification Code</string>
    <string name="login_button">Login</string>
    <!-- ################################## start  ##################################  -->
    <string name="main_tab_item_home">Home</string>
    <string name="main_tab_item_service">Service Plan</string>
    <string name="main_tab_item_bills">Invoice</string>
    <string name="main_tab_item_mine">Me</string>
    <string name="home_page_title">Home</string>
    <string name="home_page_flow_detail_title">流量使用</string>
    <string name="home_page_item_account_balance">账户余额</string>
    <string name="home_page_item_tariff_program">资费方案</string>
    <string name="home_page_item_traffic_usage">流量使用</string>
    <string name="home_page_item_charge_record">充值记录</string>
    <string name="mine_page_info_operator">"运  营  商 : %1$s"</string>
    <string name="mine_page_info_usercode">"用户编码 : %1$s"</string>
    <string name="mine_page_info_email">"邮        箱 : %1$s"</string>
    <string name="mine_page_info_phonenumber">"移动电话 : %1$s"</string>
    <string name="mine_page_info_postcode">"邮        编 : %1$s"</string>
    <string name="mine_page_business_flow">账单流量</string>
    <string name="mine_page_business_validaty">资费有效期 %1$s</string>
    <string name="mine_page_business_account">账户信息</string>
    <string name="mine_page_business_charge">充值</string>
    <string name="mine_page_business_balance">余额(元)</string>
    <string name="mine_page_business_deposit">押金(元)</string>
    <string name="mine_page_setting">设置</string>
    <string name="mine_page_feilv">费率(元)</string>
    <string name="mine_page_flow_and_remain">总流量/结余流量(MB)</string>
    <string name="charge_page_title">充值</string>
    <string name="charge_page_chargeaccount">"充值账户 : "</string>
    <string name="charge_page_paymethod">"支付方式 : "</string>
    <string name="charge_page_cardnumber">"刮刮卡有效码 : "</string>
    <string name="charge_result_page_title">充值结果</string>
    <string name="charge_result_page_charge_success">充值成功</string>
    <string name="charge_result_page_charge_failure">充值失败</string>
    <string name="charge_result_page_charge_record">充值记录</string>
    <string name="charge_result_page_charge_next">继续充值</string>
    <string name="setting_page_title">Settings</string>
    <string name="setting_page_item_change_pwd">Password</string>
    <string name="setting_page_item_config">Settings</string>
    <string name="setting_page_item_about">About</string>
    <string name="setting_page_item_quit">Log Out</string>
    <string name="about_page_system_version">"Version:%1$s"</string>
    <string name="change_pwd_page_old">"Original Password"</string>
    <string name="change_pwd_page_new">"New Password"</string>
    <string name="change_pwd_page_confirm">"Confirm Password"</string>
    <string name="change_pwd_page_old_error">"Old password error"</string>
    <string name="change_pwd_page_old_new_same">"new password cannot same as the old"</string>
    <string name="change_pwd_page_not_consistent">"Inconsistent entry password"</string>
    <string name="change_pwd_page_reset">"Reset"</string>
    <string name="change_pwd_page_save">"Save"</string>
    <string name="change_pwd_result_page_success">"密码修改成功"</string>
    <string name="change_pwd_result_page_failure">"密码修改失败"</string>
    <string name="change_pwd_result_page_title">"密码修改结果"</string>
    <string name="change_pwd_result_page_countdownjump">"%1$ds后将自动跳转到登录界面"</string>
    <string name="bill_page_title">"Invoice"</string>
    <string name="bill_page_tab_invoice_record">"发票记录"</string>
    <string name="bill_page_tab_charge_record">"充值记录"</string>
    <string name="bill_page_list_header_invoice_number">"Invoice Number"</string>
    <string name="bill_page_list_header_state_amount">"Status/Amount"</string>
    <string name="bill_page_list_header_create_time">"Create Date"</string>
    <string name="bill_page_list_header_serial_number">"SN号码"</string>
    <string name="bill_page_list_header_charge_amount">"充值金额"</string>
    <string name="bill_page_list_header_charge_time">"充值时间"</string>
    <string name="bill_page_list_child_invoice_num">"发票号码 : %1$s"</string>
    <string name="bill_page_list_child_invoice_total">"票据总额 : %1$s"</string>
    <string name="bill_page_list_child_paied_amount">"已付金额 : %1$s"</string>
    <string name="bill_page_list_child_unpaied_amount">"未付金额 : %1$s"</string>
    <string name="bill_page_list_child_service_start">"服务开始 : %1$s"</string>
    <string name="bill_page_list_child_service_end">"服务到期 : %1$s"</string>
    <string name="bill_page_list_child_invoice_type">"票据类型 : %1$s"</string>
    <string name="service_page_title">Service Plan</string>
    <string name="service_page_service">Price</string>
    <string name="service_page_user_flow">用户流量</string>
    <string name="service_page_tariff_type">资费方案</string>
    <string name="service_page_upload_speed"><Data>
        <![CDATA[
        <font color="#161618">上传速率 : </font><font color="#0099FF">%1$dMB</font>
        ]]></Data>
    </string>
    <string name="service_page_download_speed">
        <![CDATA[
        <font color="#161618">下载速率 : </font><font color="#4CAF50">%1$dMB</font>
        ]]>
    </string>
    <string name="service_page_upload_total">
        <![CDATA[
        <font color="#A8A8A8">上传总量</font><font color="#0099FF"><big><big>%1$.2f</big></big>GB</font>
        ]]>
    </string>
    <string name="service_page_download_total">
        <![CDATA[
        <font color="#A8A8A8">下载总量</font><font color="#4CAF50"><big><big>%1$.2f</big></big>GB</font>
        ]]>
    </string>

    <string name="tariff_program_active">激活</string>
    <string name="tariff_result_title">更改资费方案</string>
    <string name="tariff_result_success">资费方案修改成功</string>
    <string name="tariff_result_failure">资费方案修改失败</string>
    <string name="tariff_result_prompt">方案于下月初生效，如有疑问请致电XXX-XXXXXX</string>

    <string-array name="user_flow">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="prompt_no_network">No network</string>
    <string name="prompt_password_new_and_old_cant_same">新密码不能与旧密码相同</string>
    <string name="prompt_password_not_consistent">两次输入的密码不一致</string>
    <string name="dialog_title_update_password">修改密码</string>
    <string name="dialog_content_update_password">正在发送请求，请稍后</string>
    <string name="prompt_login_failure">Network Error</string>
    <string name="dialog_title_login">登录</string>
    <string name="dialog_content_login">正在登录，请稍后</string>
    <string name="dialog_content_quit">"Are you sure to exit?"</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_content_active">"Are you sure to active?"</string>
    <string name="config_flow_promt">Reminder of Balance Flow</string>
    <string name="config_time_promt">Reminder of Balance Days</string>
    <string name="config_service_promt">Reminder of Deactive</string>
    <string name="config_flow_tip">Drag the slider to set</string>
    <string name="config_button_save">Save</string>
    <string name="config_button_reset">Reset</string>
    <string name="out_of_service">Deactive</string>
    <string name="all_flow">"Total Flow"</string>
    <string name="balance_time">"Balance Days"</string>
    <string name="account">"Balance"</string>

    <string name="main_fragment_all_flow"><Data>
        <![CDATA[
        <font color="#1DA3FC"><big><big>%1$s</big></big></font><font color="#1DA3FC">%2$s</font>
        ]]></Data>
    </string>

    <string name="main_fragment_balance_time"><Data>
        <![CDATA[
        <font color="#1DA3FC"><big><big>%1$s</big></big></font><font color="#1DA3FC">%2$s</font>
        ]]></Data>
    </string>

    <string name="service_plan_fragment_account"><Data>
        <![CDATA[
        <font color="#FFFFFF">%1$s</font><br><font color="#FFFFFF"><big><big>%2$s</big></big></font><font color="#FFFFFF">%3$s</font>
        ]]></Data>
    </string>

    <string name="wave_view_text_balance">"Residue %1$s"</string>
    <string name="wave_view_text_balance_flow">"Balance Flow"</string>
    <string name="wave_view_text_unlimit">Unlimit</string>
    <string name="service_plan">Service Plan</string>
    <string name="service_end">Expiry Date</string>
    <string name="flow_statistics">Flow Usage</string>
    <string name="expiry_date">"Expiry Date %1$s"</string>
    <string name="day">"Day"</string>
    <string name="days">"Days"</string>
    <string name="service_fragment_total_flow">"Total Flow %1$s"</string>
    <string name="service_fragment_unuse_flow">"Balance Flow %1$s"</string>
    <string name="network_error">"Network Error"</string>
    <string name="refersh">"Refresh"</string>
    <string name="pulltorefresh_end_text">"------In the end------"</string>
    <string name="pulltorefresh_down_to_refresh">"Pull to refresh"</string>
    <string name="pulltorefresh_release_to_refresh">"Release to refresh"</string>
    <string name="pulltorefresh_up_to_more">"Pull to load more"</string>
    <string name="pulltorefresh_release_to_more">"Release to load more"</string>
    <string name="pulltorefresh_downloading">"Loading"</string>
    <string name="no_data">"No Datas"</string>
    <string name="loading">"Loading..."</string>
    <string name="switch_on">"on"</string>
    <string name="switch_off">"off"</string>

    <string name="listfooterview_normal">"Pull to load more"</string>
    <string name="listfooterview_nomore">"------In the end------"</string>
    <string name="listfooterview_ready">"Release to load more"</string>
    <!-- ################################## end   ##################################  -->
</resources>
