<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/tariff_result_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home"
            style="@style/main_tab_textview_style"
            android:drawableTop="@drawable/home_tab_home"
            android:text="@string/main_tab_item_home"/>

        <TextView
            android:id="@+id/service"
            style="@style/main_tab_textview_style"
            android:drawableTop="@drawable/home_tab_service"
            android:text="@string/main_tab_item_service"/>

        <TextView
            android:id="@+id/bills"
            style="@style/main_tab_textview_style"
            android:drawableTop="@drawable/home_tab_bills"
            android:text="@string/main_tab_item_bills"/>

        <TextView
            android:id="@+id/mine"
            style="@style/main_tab_textview_style"
            android:drawableTop="@drawable/home_tab_mine"
            android:text="@string/main_tab_item_mine"/>

    </LinearLayout>
</LinearLayout>