<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/titlelayout"
        layout="@layout/fragment_title_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/tariff_result_bg"
        android:layout_below="@id/titlelayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/oldlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/login_text_color_hint"
            app:passwordToggleDrawable="@drawable/password_input_toggle">

            <EditText
                android:id="@+id/oldpwd"
                style="@style/login_edittext"
                android:drawableLeft="@drawable/icon_old_password"
                android:drawablePadding="20dp"
                android:hint="@string/change_pwd_page_old"
                android:inputType="textPassword"
                android:paddingLeft="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/error_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/oldlayout"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_pwd_page_old_error"
                android:textColor="@color/login_input_error"
                android:textSize="11sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_input_error"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_old"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="6dp"
            android:textColorHint="@color/login_text_color_hint"
            app:passwordToggleDrawable="@drawable/password_input_toggle">

            <EditText
                android:id="@+id/newpwd"
                style="@style/login_edittext"
                android:drawableLeft="@drawable/icon_new_passowrd"
                android:drawablePadding="20dp"
                android:hint="@string/change_pwd_page_new"
                android:inputType="textPassword"
                android:paddingLeft="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/error_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newlayout"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_input_error_user"
                android:textColor="@color/login_input_error"
                android:textSize="11sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_input_error"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/comfirmlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_new"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="6dp"
            android:textColorHint="@color/login_text_color_hint"
            app:passwordToggleDrawable="@drawable/password_input_toggle">

            <EditText
                android:id="@+id/confirmpwd"
                style="@style/login_edittext"
                android:drawableLeft="@drawable/icon_new_passowrd"
                android:drawablePadding="20dp"
                android:hint="@string/change_pwd_page_confirm"
                android:inputType="textPassword"
                android:paddingLeft="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/error_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comfirmlayout"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_pwd_page_not_consistent"
                android:textColor="@color/login_input_error"
                android:textSize="11sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_input_error"/>
        </LinearLayout>


        <TextView
            android:id="@+id/reset"
            style="@style/change_pwd_page_btn"
            android:background="@drawable/charge_reset_bg"
            android:text="@string/change_pwd_page_reset"
            android:textColor="#FF6999E5"/>

        <TextView
            android:id="@+id/save"
            style="@style/change_pwd_page_btn"
            android:layout_toRightOf="@id/reset"
            android:background="@drawable/charge_save_bg"
            android:text="@string/change_pwd_page_save"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</RelativeLayout>