<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/titlelayout"
        layout="@layout/fragment_title_layout"/>

    <RelativeLayout
        android:id="@+id/changepassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/titlelayout"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_page_item_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:text="@string/setting_page_item_change_pwd"
            android:textColor="#FF161618"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/icon_right"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/configuration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/changepassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_page_item_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:text="@string/setting_page_item_config"
            android:textColor="#FF161618"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/icon_right"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/configuration"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_page_item_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:text="@string/setting_page_item_about"
            android:textColor="#FF161618"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/icon_right"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/quit"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/setting_page_quit_bg"
        android:gravity="center"
        android:text="@string/setting_page_item_quit"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

</RelativeLayout>