<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="106dp"
            android:src="@drawable/icon_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/login_text_color_hint">

            <EditText
                android:id="@+id/username"
                style="@style/login_edittext"
                android:drawableLeft="@drawable/icon_login_name"
                android:drawableStart="@drawable/icon_login_name"
                android:hint="@string/login_input_username"
                android:inputType="textVisiblePassword"
                android:paddingBottom="12dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/error_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_input_error_user"
                android:textColor="@color/login_input_error" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_input_error" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/login_text_color_hint"
            app:passwordToggleDrawable="@drawable/password_input_toggle"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                style="@style/login_edittext"
                android:drawableLeft="@drawable/icon_login_pwd"
                android:drawableStart="@drawable/icon_login_pwd"
                android:hint="@string/login_input_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/error_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_input_error_pwd"
                android:textColor="@color/login_input_error" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_input_error" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_text_color_hint">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/login_edittext_bg"
                    android:drawableLeft="@drawable/icon_code"
                    android:drawablePadding="30dp"
                    android:drawableStart="@drawable/icon_code"
                    android:hint="@string/login_input_code"
                    android:inputType="textVisiblePassword"
                    android:maxLength="4"
                    android:paddingBottom="12dp"
                    android:textColor="@color/login_text_color"
                    android:textColorHint="@color/login_text_color_hint"
                    android:textCursorDrawable="@drawable/login_focus"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_input_error_code"
                android:textColor="@color/login_input_error" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_input_error" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/setting_page_quit_bg"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

    </LinearLayout>
</ScrollView>
